[package]
name = "bevy_dioxus_sync"
version = "0.1.0"
edition = "2024"
description = "Top crate for bevy-dioxus interop through syncronization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["dom", "ui", "gui", "bevy", "dioxus"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "examples/*"
]
resolver = "3"

[workspace.dependencies]
# TODO: dioxus-native fails to publish without these features, even though the crate doesn't need them. 
# remove net and html when that is resolved.
dioxus-native = { version = "0.7", default-features = false, features = ["net", "html"]}
dioxus-native-dom = {version = "0.7", default-features = false}
dioxus = {version = "0.7", default-features = false}
dioxus-signals = {version = "0.7", default-features = false}
dioxus-hooks = {version = "0.7", default-features = false}
dioxus-core = {version = "0.7", default-features = false}
dioxus-html = {version = "0.7", default-features = false}
dioxus-core-macro = {version = "0.7", default-features = false}
dioxus-devtools = {version = "0.7", default-features = false}
dioxus-document = {version = "0.7", default-features = false}
dioxus-asset-resolver = {version = "0.7", default-features = false}

bevy_dioxus_sync = {path = "./", version = "0.1"}
bevy_dioxus_render = {path = "./crates/render", version = "0.1"}
bevy_dioxus_hooks = {path = "./crates/hooks", version = "0.1"}
bevy_dioxus_interop = {path = "./crates/interop", version = "0.1"}
bevy_dioxus_messages = {path = "./crates/messages", version = "0.1"}
bevy = {version = "0.17"}
bevy_ecs = {version = "0.17"}
bevy_render = {version = "0.17"}
bevy_app = {version = "0.17"}
bevy_transform = {version = "0.17"}
bevy_mesh = {version = "0.17"}
bevy_utils = {version = "0.17"}
bevy_window = {version = "0.17"}
bevy_math = {version = "0.17"}
bevy_winit = {version = "0.17"}
bevy_asset = {version = "0.17"}
bevy_log = {version = "0.17"}
bevy_input = {version = "0.17"}
bevy_time = {version = "0.17"}
bevy_image = {version = "0.17"}
bevy_picking = {version = "0.17"}
bevy_derive = {version = "0.17"}
bevy_color = {version = "0.17"}
bevy_sprite = {version = "0.17"}
bevy_pbr = {version = "0.17"}
bevy_core_pipeline = {version = "0.17"}
bevy_tasks = {version = "0.17"}
bevy_camera = {version = "0.17"}
bevy_sprite_render = {version = "0.17"}

vello = {version = "0.6"}
rustc-hash = "1"
bytemuck = "1.23"
data-url = "0.3.2"
bytes = "1.10"
tokio = "1.48"
maybe-debug = "0.1"

anyrender_vello = {version = "0.6", default-features = false}
blitz-net = { version = "0.2", default-features = false}
blitz-paint = { version = "0.2", default-features = false}
blitz-traits = { version = "0.2", default-features = false}
blitz-dom = { version = "0.2.4", default-features = false }
blitz-shell = { version = "0.2", default-features = false }
blitz-html = {version = "0.2", default-features = false}

async-std = "1.13"
crossbeam-channel = "0.5"
wgpu = "26"
wgpu-types = "26"

[dependencies]
bevy_dioxus_render = {workspace = true}
bevy_dioxus_hooks = {workspace = true}
bevy_dioxus_interop = {workspace = true}
bevy_dioxus_messages = {workspace = true}
dioxus-asset-resolver = {workspace = true}
dioxus-devtools = {workspace = true}

bevy_input = {workspace = true}
bevy_log = {workspace = true}
bevy_time = {workspace = true}
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_tasks = {workspace = true}
bevy_utils = {workspace = true}
bevy_math = {workspace = true}
bevy_derive = {workspace = true}
bevy_asset = {workspace = true}
bevy_image = {workspace = true}
wgpu-types = {workspace = true}

async-std = {workspace = true}
crossbeam-channel = {workspace = true}
data-url = {workspace = true}
bytes = {workspace = true}

blitz-dom = {workspace = true}
blitz-traits = {workspace = true}
blitz-html = {workspace = true}

dioxus-core = {workspace = true}
dioxus-native-dom = {workspace = true}
dioxus-signals = {workspace = true}
dioxus-hooks = {workspace = true}
dioxus-core-macro = {workspace = true}
dioxus-document = {workspace = true}