[package]
name = "bevy_dioxus_events"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_log = {workspace = true}
bevy_input = {workspace = true}
bevy_math = {workspace = true}
bevy_sprite = {workspace = true}
bevy_transform = {workspace = true}
bevy_window = {workspace = true}
bevy_image = {workspace = true}
bevy_asset = {workspace = true}
dioxus-native = {workspace = true}
dioxus = {workspace = true}
blitz-dom = {workspace = true}
blitz-traits = {workspace = true}

bevy_dioxus_render = {workspace = true}