[package]
name = "bevy_dioxus_hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {workspace = true}
bevy_log = {workspace = true}
bevy_app = {workspace = true}
bevy_asset = {workspace = true}
bevy_time = {workspace = true}
bevy_utils = {workspace = true}
bevy_transform = {workspace = true}
bevy_dioxus_interop = {workspace = true}

async-std = {workspace = true}
crossbeam-channel = {workspace = true}
bytemuck = {workspace = true}
tokio = {workspace = true, features = ["sync"]}

dioxus-signals = {workspace = true}
dioxus-hooks = {workspace = true}
dioxus-core = {workspace = true}