[package]
name = "bevy_dioxus_interop"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}

crossbeam-channel = {workspace = true}
bytemuck = {workspace = true, features = ["derive"]}
bevy_log = {workspace = true}
dioxus = {workspace = true}