[package]
name = "bevy_dioxus_interop"
version = "0.1.0"
edition = "2024"
description = "channels and other misc things for bevy_dioxus_interop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["dom", "ui", "gui", "bevy", "dioxus"]

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}

crossbeam-channel = {workspace = true}
bytemuck = {workspace = true, features = ["derive"]}
bevy_log = {workspace = true}
dioxus-signals = {workspace = true}
tokio = {workspace = true, features = ["sync"]}