[package]
name = "bevy_dioxus_interop"
version.workspace = true
edition.workspace = true
description = "Miscellaneous bevy_dioxus_sync features that don't fit in the other crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["dom", "ui", "gui", "bevy", "dioxus"]
categories = ["game-development", "gui"]

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}

crossbeam-channel = {workspace = true}
bytemuck = {workspace = true, features = ["derive"]}
dioxus-signals = {workspace = true}
dioxus-native = {workspace = true}
# dioxus-native-dom = {workspace = true}
dioxus-devtools = {workspace = true}
blitz-dom = {workspace = true}
tokio = {workspace = true, features = ["sync"]}
generational-box = {workspace = true}
arc-swap = {workspace = true}
dioxus-core = {workspace = true}