[package]
name = "bevy_dioxus_messages"
version = "0.1.0"
edition = "2024"
description = "channels and other misc things for bevy_dioxus_interop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["dom", "bevy", "dioxus", "events", "messages"]

[dependencies]
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_log = {workspace = true}
bevy_input = {workspace = true}
bevy_math = {workspace = true}
bevy_sprite = {workspace = true}
bevy_transform = {workspace = true}
bevy_window = {workspace = true}
bevy_image = {workspace = true}
bevy_asset = {workspace = true}
bevy_sprite_render = {workspace = true}
dioxus-native = {workspace = true}
dioxus-html = {workspace = true}
blitz-dom = {workspace = true}
blitz-traits = {workspace = true}

bevy_dioxus_render = {workspace = true}