[package]
name = "bevy_dioxus_messages"
version.workspace = true
edition.workspace = true
description = "Keyboard, mouse, and window event synchronization from bevy to dioxus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["dom", "bevy", "dioxus", "events", "messages"]
categories = ["game-development", "gui"]

[dependencies]
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_input = {workspace = true}
bevy_math = {workspace = true}
bevy_sprite = {workspace = true}
bevy_transform = {workspace = true}
bevy_window = {workspace = true}
bevy_image = {workspace = true}
bevy_asset = {workspace = true}
bevy_sprite_render = {workspace = true}
dioxus-native = {workspace = true}
# dioxus-native-dom = {workspace = true}
dioxus-html = {workspace = true}
blitz-dom = {workspace = true}
blitz-traits = {workspace = true}
bevy_picking = { workspace = true, features = ["mesh_picking"] }

bevy_dioxus_render = {workspace = true}
bevy_dioxus_interop = {workspace = true}
bevy_dioxus_tracing = {workspace = true}