[package]
name = "bevy_dioxus_tracing"
version.workspace = true
edition.workspace = true
description = "Internal bevy_dioxus_sync crate for tracing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rydb/bevy_dioxus_sync"
keywords = ["bevy", "dioxus", "tracing", "macros"]
categories = ["development-tools::debugging", "game-development"]

[dependencies]
macro-v = {workspace = true}
tracing = {workspace = true, optional = true}

[features]
trace = ["dep:tracing"]
default = ["trace"]