[package]
name = "minimal"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = {workspace = true, features = ["trace_tracy"]}
bevy_dioxus_sync = {workspace = true}
dioxus = {workspace = true, default-features = false, features = ["native", "launch", "devtools"]}
frontend = {path = "./frontend"}