[package]
name = "minimal"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = {workspace = true, features = ["trace_tracy"]}
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_color = {workspace = true}
bevy_asset = {workspace = true}
bevy_pbr = {workspace = true}
bevy_transform = {workspace = true}
bevy_derive = {workspace = true}
bevy_dioxus_sync = {workspace = true}
bevy_dioxus_interop = {workspace = true}
dioxus_bevy_signals = {workspace = true, features = ["tracing"]}

dioxus = {workspace = true, default-features = false, features = ["html", "signals", "hooks", "macro", "native", "asset", "document", "launch", "devtools"]}
tracing-subscriber = "0.3"