[package]
name = "minimal"
version.workspace = true
edition.workspace = true

[dependencies]
# regression in naga 26 causes webgl2 to break debug mode, until bevy 0.19 update, features must be manually imported in bevy.
bevy = { workspace = true, features = [
    "std", "bevy_render", "bevy_winit", "bevy_window", "bevy_pbr",
    "bevy_sprite", "bevy_sprite_render", "bevy_core_pipeline",
    "tonemapping_luts", "zstd_rust",
    "png", "multi_threaded", "trace_tracy", "x11", "wayland",
] }
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_color = {workspace = true}
bevy_asset = {workspace = true}
bevy_pbr = {workspace = true}
bevy_transform = {workspace = true}
bevy_derive = {workspace = true}
bevy_dioxus_sync = {workspace = true}
bevy_dioxus_interop = {workspace = true}
bevy_dioxus_render = {workspace = true}
bevy_dioxus_tracing = {workspace = true}
bevy_picking = { workspace = true, features = ["mesh_picking"] }
blitz-dom = {workspace = true}
dioxus-core = {workspace = true}
dioxus-native = {workspace = true}
dioxus_bevy_signals = {workspace = true}

dioxus = {workspace = true, features = ["html", "signals", "hooks", "macro", "asset", "document", "launch", "devtools"]}
tracing-subscriber = "0.3"
tracing-chrome = {workspace = true}
